# crac-protobuf

./: AGENTS.md  CLAUDE.md  GEMINI.md  README  README.md  REVISION_GUIDE.md  generate_proto_code.py  generate_proto_js.sh  pyproject.toml  setup.py  sys
.github/workflows/: python-publish.yml
buttons/: button_pb2.py  button_pb2_grpc.py
crac_protobuf/: button_pb2.py  button_pb2_grpc.py  camera_pb2.py  camera_pb2_grpc.py  chart_pb2.py  chart_pb2_grpc.py  cover_mirror_pb2.py  cover_mirror_pb2_grpc.py  curtains_pb2.py  curtains_pb2_grpc.py  data_image_pb2.py  data_image_pb2_grpc.py  envelope_pb2.py  envelope_pb2_grpc.py  geographic_pb2.py  geographic_pb2_grpc.py  roof_pb2.py  roof_pb2_grpc.py  telescope_pb2.py  telescope_pb2_grpc.py  ups_pb2.py  ups_pb2_grpc.py
curtains/: curtains_pb2.py  curtains_pb2_grpc.py
interfaces/: button.proto  button_pb2.py  button_pb2_grpc.py  camera.proto  chart.proto  chart_pb2.py  chart_pb2_grpc.py  cover_mirror.proto  curtains.proto  curtains_pb2.py  curtains_pb2_grpc.py  data_image.proto  envelope.proto  envelope_pb2.py  envelope_pb2_grpc.py  gauge.proto  geographic.proto  roof.proto  roof_pb2.py  roof_pb2_grpc.py  telescope.proto  telescope_pb2.py  telescope_pb2_grpc.py  ups.proto
protobufs/: button.proto  curtains.proto  roof.proto  telescope.proto
roof/: roof_pb2.py  roof_pb2_grpc.py
src/interfaces/: button.proto  curtains.proto  roof.proto  telescope.proto
telescope/: telescope_pb2.py  telescope_pb2_grpc.py
