[tool.poetry]
name = "crac_protobuf"
version = "0.1.21.0"
description = "Protobuf contracts for client/server communication"
authors = ["Alessio Caradossi <alessio@theeyes.org>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "piwheels"
#url = "https://www.piwheels.org/simple/"
