[project]
name = "crac-protobuf"
version = "0.1.21.1"
description = "Protobuf contracts for client/server communication"
authors = [{ name = "Alessio Caradossi", email = "alessio@theeyes.org" }]
license = "GPL-3.0-only"
requires-python = ">=3.9"
dependencies = [
    "grpcio-tools>=1.43.0",
]

[project.optional-dependencies]
dev = [
    "autopep8>=1.6.0",
]

[tool.setuptools.packages.find]
include = ["crac_protobuf*"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
